==> ugly3/note/GD32F407VET6/Project/13-RFID/Hardware/RFID/rfid.c <==
#include "rfid.h"
#define MAXRLEN 18

short PcdRequest(unsigned char req_code,unsigned char *pTagType)
{
   short status;  
   unsigned int  unLen;
   unsigned char ucComMF522Buf[MAXRLEN]; 
//  unsigned char xTest ;
   ClearBitMask(Status2Reg,0x08);
   WriteRawRC(BitFramingReg,0x07);

//  xTest = ReadRawRC(BitFramingReg);
//  if(xTest == 0x07 )
 //   { LED_GREEN  =0 ;}
 // else {LED_GREEN =1 ;while(1){}}
   SetBitMask(TxControlReg,0x03);

   ucComMF522Buf[0] = req_code;

   status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,1,ucComMF522Buf,&unLen);

//   if(status  == MI_OK )
//   { printf("ok\r\n");}
//   else {printf("on\r\n") ;}
	 
   if ((status == MI_OK) && (unLen == 0x10))
   {    
		 	 
       *pTagType     = ucComMF522Buf[0];
       *(pTagType+1) = ucComMF522Buf[1];

   }
   else
   {   status = MI_ERR;   }
   return status;
	 
}

short PcdAnticoll(unsigned char *pSnr)
{
    short status;
    unsigned char i,snr_check=0;
    unsigned int  unLen;
    unsigned char ucComMF522Buf[MAXRLEN]; 
    

    ClearBitMask(Status2Reg,0x08);
    WriteRawRC(BitFramingReg,0x00);
    ClearBitMask(CollReg,0x80);
 
    ucComMF522Buf[0] = PICC_ANTICOLL1;
    ucComMF522Buf[1] = 0x20;

    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,2,ucComMF522Buf,&unLen);

    if (status == MI_OK)
    {
    	 for (i=0; i<4; i++)
         {   
             *(pSnr+i)  = ucComMF522Buf[i];
             snr_check ^= ucComMF522Buf[i];
         }
         if (snr_check != ucComMF522Buf[i])
         {   status = MI_ERR;    }
    }
    
    SetBitMask(CollReg,0x80);
    return status;
}

short PcdAuthState(unsigned char auth_mode,unsigned char addr,unsigned char *pKey,unsigned char *pSnr)
{
    short status;
    unsigned int  unLen;
    unsigned char i,ucComMF522Buf[MAXRLEN]; 

    ucComMF522Buf[0] = auth_mode;
    ucComMF522Buf[1] = addr;
    for (i=0; i<6; i++)
    {    ucComMF522Buf[i+2] = *(pKey+i);   }
    for (i=0; i<6; i++)
    {    ucComMF522Buf[i+8] = *(pSnr+i);   }
 //   memcpy(&ucComMF522Buf[2], pKey, 6); 
 //   memcpy(&ucComMF522Buf[8], pSnr, 4); 
    
    status = PcdComMF522(PCD_AUTHENT,ucComMF522Buf,12,ucComMF522Buf,&unLen);
    if ((status != MI_OK) || (!(ReadRawRC(Status2Reg) & 0x08)))
    {   status = MI_ERR;   }
    
    return status;
}

short PcdReset(void)
{
    WriteRawRC(CommandReg,PCD_RESETPHASE);
	  delay_100ns(30);

    WriteRawRC(ModeReg,0x3D);            //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL,30);           
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    WriteRawRC(TxAutoReg,0x40); 

    
	  
    return MI_OK;
	
//	return MI_ERR;
}

unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char RegVal;
	uint32_t timeOut=0;
	  //Address<<=1;
    Address = ((Address<<1) & 0x7e) | 0x80;   //code the first byte
	
	gpio_bit_write(rfid_cs_Port,rfid_cs_Pin,RESET);
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_TBE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_transmit(SPI1, Address);
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_RBNE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	RegVal=spi_i2s_data_receive(SPI1);
	
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_TBE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_transmit(SPI1, 0);
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_RBNE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	RegVal=spi_i2s_data_receive(SPI1);
	

	gpio_bit_write(rfid_cs_Port,rfid_cs_Pin,SET);


    return RegVal;
}

short WriteRawRC(unsigned char Address, unsigned char value)
{  
//    unsigned char EchoByte;
	//Address<<=1;
	uint32_t timeOut=0;
  Address = (Address<<1)&0x7e;   //code the first byte
	
	gpio_bit_write(rfid_cs_Port,rfid_cs_Pin,RESET);
	
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_TBE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_transmit(SPI1, Address);
	
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_RBNE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_receive(SPI1);
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_TBE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_transmit(SPI1, value);
	timeOut=0;
	while (RESET == spi_i2s_flag_get(SPI1, SPI_FLAG_RBNE)){timeOut++;delay_us(10);if(timeOut>30000)break;}
	spi_i2s_data_receive(SPI1);
	//spi_i2s_data_receive(SPI1);
	gpio_bit_write(rfid_cs_Port,rfid_cs_Pin,SET);

	return STATUS_SUCCESS;
}

short PcdComMF522(unsigned char Command, 
                 unsigned char *pInData, 
                 unsigned char InLenByte,
                 unsigned char *pOutData, 
                 unsigned int  *pOutLenBit)
{
    short status = MI_ERR;
    unsigned char irqEn   = 0x00;
    unsigned char waitFor = 0x00;
    unsigned char lastBits;
    unsigned char n;
    unsigned int i;
    switch (Command)
    {
       case PCD_AUTHENT:
          irqEn   = 0x12;
          waitFor = 0x10;
          break;
       case PCD_TRANSCEIVE:
          irqEn   = 0x77;
          waitFor = 0x30;
          break;
       default:
         break;
    }
   
    WriteRawRC(ComIEnReg,irqEn|0x80);
    ClearBitMask(ComIrqReg,0x80);
    WriteRawRC(CommandReg,PCD_IDLE);
    SetBitMask(FIFOLevelReg,0x80);
    
    for (i=0; i<InLenByte; i++)
    {   WriteRawRC(FIFODataReg, pInData[i]);    }
    WriteRawRC(CommandReg, Command);
   
    
    if (Command == PCD_TRANSCEIVE)
    {    SetBitMask(BitFramingReg,0x80);  }
    
    i = 600;//根据时钟频率调整，操作M1卡最大等待时间25ms
    do 
    {
         n = ReadRawRC(ComIrqReg);
         i--;
    }
    while ((i!=0) && !(n&0x01) && !(n&waitFor));
    ClearBitMask(BitFramingReg,0x80);
	      
    if (i!=0)
    {    
         if(!(ReadRawRC(ErrorReg)&0x1B))
         {
             status = MI_OK;
             if (n & irqEn & 0x01)
             {   status = MI_NOTAGERR;   }
             if (Command == PCD_TRANSCEIVE)
             {
               	n = ReadRawRC(FIFOLevelReg);
              	lastBits = ReadRawRC(ControlReg) & 0x07;
                if (lastBits)
                {   *pOutLenBit = (n-1)*8 + lastBits;   }
                else
                {   *pOutLenBit = n*8;   }
                if (n == 0)
                {   n = 1;    }
                if (n > MAXRLEN)
                {   n = MAXRLEN;   }
                 for (i=0; i<n; i++)
                 {   pOutData[i] = ReadRawRC(FIFODataReg);    }

            }
         }
         else
         {   status = MI_ERR;   }
        
   }
   
   SetBitMask(ControlReg,0x80);           // stop timer now
   WriteRawRC(CommandReg,PCD_IDLE); 
   return status;
}
